# assessment1

./: .gitignore  CMakeLists.txt  README.md  Record.cpp  Record.h  main.cpp
assessment1/: CMakeLists.txt
assessment1/RecordCore/: CMakeLists.txt  Record.cpp  Record.h
assessment1/data/testjson/: json_and_test_one.json  json_and_test_three.json  json_and_test_two.json  json_or_test.json  sample_json_1.json  sample_json_2.json
assessment1/data/testjson/sol3/: deep_or.json  outer_and_nested_or.json
assessment1/include/IQueryOperator/: AndOperator.h  CMakeLists.txt  IQueryOperator.h  LeafNode.cpp  LeafNode.h  OrOperator.h  QueryBuilder.cpp  QueryBuilder.h
assessment1/include/IQueryOperator/include/: LeafNode.h
assessment1/include/InspectionGroup/: CMakeLists.txt  InspectionGroup.cpp  InspectionGroup.h
assessment1/include/InspectionGroupFilter/: CMakeLists.txt  InspectionGroupFilter.cpp  InspectionGroupFilter.h  QueryFileStructure.h
assessment1/include/InspectionRegion/: CMakeLists.txt  InspectionRegion.cpp  InspectionRegion.h
assessment1/include/Writers/: CMakeLists.txt  ResultWriter.cpp  ResultWriter.h
assessment1/libs/IQueryOperator/: CMakeLists.txt
assessment1/libs/IQueryOperator/include/: AndOperator.h  IQueryOperator.h  LeafNode.h  OrOperator.h
assessment1/libs/IQueryOperator/src/: AndOperator.cpp  LeafNode.cpp  OrOperator.cpp  QueryBuilder.cpp
assessment1/libs/InspectionGroupFilter/: CMakeLists.txt  QueryFileStructure.h
assessment1/libs/InspectionGroupFilter/src/: QueryFileStructure.cpp
assessment1/libs/InspectionRegion/: CMakeLists.txt
assessment1/libs/InspectionRegion/include/: InspectionRegion.h
assessment1/libs/InspectionRegion/src/: InspectionRegion.cpp
assessment1/libs/InspectionRegionFilter/: CMakeLists.txt
assessment1/libs/InspectionRegionFilter/include/: InspectionGroupFilter.h  QueryFileJsonParser.h  QueryFileStructure.h
assessment1/libs/InspectionRegionFilter/src/: InspectionGroupFilter.cpp  QueryFileJsonParser.cpp  QueryFileStructure.cpp
assessment1/libs/Util/: CMakeLists.txt
assessment1/libs/Utility/: ThrowWithContext.hpp
assessment1/libs/Writers/: CMakeLists.txt  ResultFileIO.cpp  ResultFileIO.h  ResultWriter.cpp
assessment1/solution 1/: CMakeLists.txt  Record.cpp  Record.h  main.cpp  solution1.cpp
assessment1/solution 2/: CMakeLists.txt  FilterStruct.h  output.txt  solution2.cpp
assessment1/solution 3/: CMakeLists.txt  solution3.cpp
assessment1/solution_1/: CMakeLists.txt  schema.pgsql  solution1.cpp
assessment1/solution_2/: CMakeLists.txt  solution2.cpp  solution2_core.cpp
assessment1/solution_2/include/: solution2_core.h
assessment1/solution_3/: CMakeLists.txt  solution3.cpp
assessment1/tests/: CMakeLists.txt
assessment1/tests/solution_1/: CMakeLists.txt
assessment1/tests/solution_1_test/: CMakeLists.txt  test_solution1.cpp
assessment1/tests/solution_2/: CMakeLists.txt  test_solution2.cpp
assessment1/tests/solution_2_test/: CMakeLists.txt  test_solution2.cpp
assessment1/tests/solution_3_test/: CMakeLists.txt  test_solution3.cpp
